Fixed footer on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -287,7 +287,7 @@ h1 img {
 .minutiae h5 {
   color: #00000090;
   font-weight: 100;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   padding: 0;
   margin: 3px;
   font-size: 1.5vh;
